--- a/src/main/resources/templates/administrator/profile.html
+++ b/src/main/resources/templates/administrator/profile.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    < <meta charset="UTF-8">
     <title>Profile</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--Configuración de estilos-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link th:href="@{/css/estilos-Naucratis.css}" rel="stylesheet">
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 <body>
-<header>
-    <table>
-        <td>
-            <img width="100px" th:src="@{/images/Naucratis.png}">
-        </td>
-        <td>
-            <h1> Naucratis </h1>
-        </td>
-    </table>
-</header>
+
+<div id="wrapper">
+    <!--barra de herramientas-->
+    <div th:replace="/user_no_register/home :: toolbar"/>
+    <!-- Fin barra de herramientas-->
+
+    <div id="content-wrapper" class="d-flex flex-column">
+
+        <div id="content">
+            <div th:replace="/user_no_register/home :: contentbar"/>
+            <!--Barra de contenido-->
+
 <nav>
     <ul>
         <li th:if="${role != null}">
@@ -24,9 +34,16 @@
         </li>
     </ul>
 </nav>
+
+<!-- Perfil -->
 <h1> Administrador </h1>
 <h2> Datos personales:</h2>
-<table>
+
+<div class="row gx-5 gx-lg-5 align-items-center">
+    <div class="col-md-4"><img class="card-img-top mb-5 mb-md-0"  th:src="'data:image/png;base64,'+${administrator.getImageBase64()}"></div>
+    <div class="col-md-6">
+     <table class="table-responsive">
+
     <tr><img width="200px" th:src="'data:image/png;base64,'+${administrator.getImageBase64()}"></tr>
     <tr>
         <td>Nombre: </td>
@@ -49,7 +66,40 @@
         <td><span th:text="${administrator.email}">CORREO</span></td>
     </tr>
 </table>
+    </div>
+</div>
 <h2> <a th:href="@{/administrator/libraries}"> Librerias </a> </h2>
-<br>
+            <!-- Footer-->
+            <footer class="py-5 bg-dark">
+                <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            </footer>
+            <!-- Bootstrap core JS-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Core theme JS-->
+            <script src="js/scripts.js"></script>
+        </div>
+    </div>
+</div>
+
+<div th:replace="/user_no_register/home :: utils"/>
+
+<!--Bootstrap complementado con JavaScript-->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!--Complemento JavaScript-->
+<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!--Scripts personalizados para todas las páginas-->
+<script src="/js/naucratis.min.js"></script>
+
+<!--Complementos de nivel de página-->
+<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!--Secuencias de comandos personalizadas a nivel de página-->
+<script src="/js/demo/datatables-demo.js"></script>
+
+
 </body>
 </html>
