--- a/src/main/resources/templates/administrator/register/form_book.html
+++ b/src/main/resources/templates/administrator/register/form_book.html
@@ -1,115 +1,173 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-      <meta charset="UTF-8">
-      <title>Formulario registro libro</title>
-  </head>
-  <body>
-  <header>
-      <table>
-          <td>
-              <img width="100px" th:src="@{/images/Naucratis.png}">
-          </td>
-          <td>
-              <h1> Naucratis </h1>
-          </td>
-      </table>
-  </header>
-  <nav>
-      <ul>
-          <li th:if="${#strings.equals(role,'administrator')}">
-              <a th:href="@{/administrator/libraries}"><button type="button">Librerias</button> </a>
-          </li>
-          <li th:if="${role != null}">
-              <a th:href="@{'/' + ${role}}"> <button type="button"> Ver perfil </button></a>
-          </li>
-          <li th:if="${role != null}">
-              <form method="POST" th:action="@{/logout}">
-                  <input type="submit" value="Cerrar sesión"/>
-              </form>
-          </li>
-      </ul>
-  </nav>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Libro nuevo</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <form form method="POST" th:action="@{'/register/search_book/' + ${nameLibrary}}" id="isbn">
-      <label>Buscar libro: </label>
-      <input type="search" name="isbn">
-      <button type="submit"> Buscar </button>
-  </form>
+    <!--Configuración de estilos-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+    <link th:href="@{/css/estilos-Naucratis.css}" rel="stylesheet">
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+</head>
+<body>
+<div id="wrapper">
+        <!--barra de herramientas-->
+        <div th:replace="/user_no_register/home :: toolbar"/>
+        <!-- Fin barra de herramientas-->
 
-  <img th:if="${book != null}" width="200px" th:src="'data:image/png;base64,' + ${book.getImageBase64()}">
+        <div id="content-wrapper" class="d-flex flex-column">
 
-  <form method="POST" th:action="@{/register/book}" id="registrationBookForm" enctype="multipart/form-data">
-        <input type="hidden" th:value="${nameLibrary}" name="nameLibrary">
-        <table>
-            <tr>
-                <td><label for="isbn">ISBN: </label></td>
-                <td><input type="text" name="isbn" th:value="${book != null? book.isbn:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="name">Nombre: </label></td>
-                <td><input type="text" name="name" th:value="${book != null? book.name:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="list_authors">Autores: </label></td>
-                <td><input type="text" name="list_authors" th:value="${book != null? book.convertListAuthorsToString():''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="editorial">Editorial: </label></td>
-                <td><input type="text" name="editorial" th:value="${book != null? book.editorial:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="category">Categoria: </label></td>
-                <td><input type="text" name="category" th:value="${book != null? book.category:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="edition">Edición: </label></td>
-                <td><input type="text" name="edition" th:value="${book != null? book.edition:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="numPages">Paginas: </label></td>
-                <td><input type="text" name="numPages" th:value="${book != null? book.numPages:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="length">Largo: </label></td>
-                <td><input type="text" name="length" th:value="${book != null? book.length:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="width">Ancho: </label></td>
-                <td><input type="text" name="width" th:value="${book != null? book.width:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="height">Alto: </label></td>
-                <td><input type="text" name="height" th:value="${book != null? book.height:''}"/></td>
-            </tr>
-            <tr>
-                <td><label for="price">Precio: </label></td>
-                <td><input type="text" name="price"/></td>
-            </tr>
-            <tr>
-                <td><label for="site">Sitio: </label></td>
-                <td>
-                    <select name="site">
-                        <div th:each="site: ${sites}">
-                            <option th:value="${site.address}">
-                                <span th:text="${site.address}"> DIRECCIÓN </span>
-                            </option>
-                        </div>
-                    </select>
-                </td>
-            </tr>
-            <tr th:if="${book == null}">
-                <td><label for="cover">Portada: </label></td>
-                <td><input type="file" name="cover"/></td>
-            </tr>
-            <tr>
-                <td><label for="quantity">Cantidad: </label></td>
-                <td><input type="text" name="quantity"></td>
-            </tr>
-            <tr>
-                <td><button type="submit"> Registrar</button></td>
-            </tr>
-        </table>
-    </form>
-  </body>
+            <div id="content">
+                <!--Barra de contenido-->
+                <div th:replace="/user_no_register/home :: contentbar"/>
+                <!--Barra de contenido-->
+
+            <!-- Botones de arriba -->
+            <nav>
+                <ul>
+                    <li th:if="${#strings.equals(role,'administrator')}">
+                        <a th:href="@{/administrator/libraries}">
+                            <button type="button">Librerias</button>
+                        </a>
+                    </li>
+                    <li th:if="${role != null}">
+                        <a th:href="@{'/' + ${role}}">
+                            <button type="button"> Ver perfil</button>
+                        </a>
+                    </li>
+                    <li th:if="${role != null}">
+                        <form method="POST" th:action="@{/logout}">
+                            <input type="submit" value="Cerrar sesión"/>
+                        </form>
+                    </li>
+                </ul>
+            </nav>
+            <!-- contenido de página-->
+            <form form method="POST" th:action="@{'/register/search_book/' + ${nameLibrary}}" id="isbn">
+                <label>Buscar libro: </label>
+                <input type="search" name="isbn">
+                <button type="submit"> Buscar</button>
+            </form>
+
+            <img th:if="${book != null}" width="200px" th:src="'data:image/png;base64,' + ${book.getImageBase64()}">
+            <center>
+                <form method="POST" th:action="@{/register/book}" id="registrationBookForm"
+                      enctype="multipart/form-data">
+                    <input type="hidden" th:value="${nameLibrary}" name="nameLibrary">
+                    <div class="table-responsive">
+                        <table>
+                            <tr>
+                                <td><label for="isbn">ISBN: </label></td>
+                                <td><input type="text" name="isbn" th:value="${book != null? book.isbn:''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="name">Nombre: </label></td>
+                                <td><input type="text" name="name" th:value="${book != null? book.name:''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="list_authors">Autores: </label></td>
+                                <td><input type="text" name="list_authors"
+                                           th:value="${book != null? book.convertListAuthorsToString():''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="editorial">Editorial: </label></td>
+                                <td><input type="text" name="editorial" th:value="${book != null? book.editorial:''}"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="category">Categoría: </label></td>
+                                <td><input type="text" name="category" th:value="${book != null? book.category:''}"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="edition">Edición: </label></td>
+                                <td><input type="text" name="edition" th:value="${book != null? book.edition:''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="numPages">Páginas: </label></td>
+                                <td><input type="text" name="numPages" th:value="${book != null? book.numPages:''}"/>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td><label for="length">Largo: </label></td>
+                                <td><input type="text" name="length" th:value="${book != null? book.length:''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="width">Ancho: </label></td>
+                                <td><input type="text" name="width" th:value="${book != null? book.width:''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="height">Alto: </label></td>
+                                <td><input type="text" name="height" th:value="${book != null? book.height:''}"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="price">Precio: </label></td>
+                                <td><input type="text" name="price"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="site">Sitio: </label></td>
+                                <td>
+                                    <select name="site">
+                                        <div th:each="site: ${sites}">
+                                            <option th:value="${site.address}">
+                                                <span th:text="${site.address}"> DIRECCIÓN </span>
+                                            </option>
+                                        </div>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr th:if="${book == null}">
+                                <td><label for="cover">Portada: </label></td>
+                                <td><input type="file" name="cover"/></td>
+                            </tr>
+                            <tr>
+                                <td><label for="quantity">Cantidad: </label></td>
+                                <td><input type="text" name="quantity"></td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <button type="submit" class="btn btn-success"> Registrar</button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+
+                </form>
+            </center>
+            <!-- Footer-->
+            <footer class="py-5 bg-dark">
+                <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p>
+                </div>
+            </footer>
+            <!-- Bootstrap core JS-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Core theme JS-->
+            <script src="js/scripts.js"></script>
+        </div>
+    </div>
+</div>
+<div th:replace="/user_no_register/home :: utils"/>
+
+<!--Bootstrap complementado con JavaScript-->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!--Complemento JavaScript-->
+<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!--Scripts personalizados para todas las páginas-->
+<script src="/js/naucratis.min.js"></script>
+
+<!--Complementos de nivel de página-->
+<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!--Secuencias de comandos personalizadas a nivel de página-->
+<script src="/js/demo/datatables-demo.js"></script>
+
+</body>
 </html>
