--- a/src/main/resources/templates/customer/profile.html
+++ b/src/main/resources/templates/customer/profile.html
@@ -3,89 +3,140 @@
 <head>
     <meta charset="UTF-8">
     <title>Profile</title>
+
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--Configuración de estilos-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link th:href="@{/css/estilos-Naucratis.css}" rel="stylesheet">
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
 </head>
 <body>
-<header>
-    <table>
-        <td>
-            <img width="100px" th:src="@{/images/Naucratis.png}">
-        </td>
-        <td>
-            <h1> Naucratis </h1>
-        </td>
-    </table>
-</header>
-<nav>
-    <ul>
-        <li th:if="${role == null}">
-            <a th:href="@{/login}"> <button type="button">Iniciar Sesión</button></a>
-            <a th:href="@{/register}"> <button type="button">Registrarse</button></a>
-        </li>
-        <li th:if="${#strings.equals(role,'administrator')}">
-            <a th:href="@{/administrator/libraries}"><button type="button">Librerias</button> </a>
-        </li>
-        <li th:if="${#strings.equals(role,'customer')}">
-            <a th:href="@{/customer/shoppingCart}"><button type="button">Carrito</button> </a>
-        </li>
-        <li th:if="${role != null}">
-            <a th:href="@{'/' + ${role}}"> <button type="button"> Ver perfil </button></a>
-        </li>
-        <li th:if="${role != null}">
-            <form method="POST" th:action="@{/logout}">
-                <input type="submit" value="Cerrar sesión"/>
-            </form>
-        </li>
-    </ul>
-</nav>
-<h1> Perfil cliente <span th:text="${customer.name}">NOMBRE</span></h1>
 
-<table>
-    <tr><img width="200px" th:src="'data:image/png;base64,'+${customer.getImageBase64()}"></tr>
-    <tr>
-        <td>Nombre: </td>
-        <td><span th:text="${customer.name}">NOMBRE</span></td>
-    </tr>
-    <tr>
-        <td>Ciudad: </td>
-        <td><span th:text="${customer.city}">CIUDAD</span></td>
-    </tr>
-    <tr>
-        <td>Dirección: </td>
-        <td><span th:text="${customer.address}">DIRECCIÓN</span></td>
-    </tr>
-    <tr>
-        <td>Telefono: </td>
-        <td><span th:text="${customer.phone}">TELEFONO</span></td>
-    </tr>
-    <tr>
-        <td>Correo: </td>
-        <td><span th:text="${customer.email}">CORREO</span></td>
-    </tr>
-</table>
+<div id="wrapper">
+    <!--barra de herramientas-->
+    <div th:replace="/user_no_register/home :: toolbar"/>
+    <!-- Fin barra de herramientas-->
 
-<h2> Compras </h2>
+    <div id="content-wrapper" class="d-flex flex-column">
 
-<table>
-    <tr>
-        <td> Fecha </td>
-        <td> Id orden </td>
-        <td> Libro </td>
-        <td> Nombre libro </td>
-        <td> ISBN </td>
-        <td> Nombre libreria </td>
-        <td> Estado </td>
-        <td> Valor </td>
-    </tr>
-    <tr th:each="purchase: ${customer.getPurchases()}">
-        <td> <span th:text="${purchase.createdAt}">            </span> </td>
-        <td> <span th:text="${purchase.id}"> </span> </td>
-        <td> <img width="70px" th:src="'data:image/png;base64,'+${purchase.book.getImageBase64()}"> </td>
-        <td> <span th:text="${purchase.book.name}">   </span> </td>
-        <td> <span th:text="${purchase.book.isbn}"> </span> </td>
-        <td> <span th:text="${purchase.nameLibrary}"> </span> </td>
-        <td> <span th:text="${purchase.status}"> </span> </td>
-        <td> <span th:text="${purchase.value}">   </span> </td>
-    </tr>
-</table>
+        <div id="content">
+            <!--Barra de contenido-->
+            <div th:replace="/user_no_register/home :: contentbar"/>
+
+
+            <!-- Botones de arriba -->
+            <nav>
+                <ul>
+                    <li th:if="${role == null}">
+                        <a th:href="@{/login}"> <button type="button">Iniciar Sesión</button></a>
+                        <a th:href="@{/register}"> <button type="button">Registrarse</button></a>
+                    </li>
+                    <li th:if="${#strings.equals(role,'administrator')}">
+                        <a th:href="@{/administrator/libraries}"><button type="button">Librerias</button> </a>
+                    </li>
+                    <li th:if="${#strings.equals(role,'customer')}">
+                        <a th:href="@{/customer/shoppingCart}"><button type="button">Carrito</button> </a>
+                    </li>
+                    <li th:if="${role != null}">
+                        <a th:href="@{'/' + ${role}}"> <button type="button"> Ver perfil </button></a>
+                    </li>
+                    <li th:if="${role != null}">
+                        <form method="POST" th:action="@{/logout}">
+                            <input type="submit" value="Cerrar sesión"/>
+                        </form>
+                    </li>
+                </ul>
+            </nav>
+
+            <!-- Perfil -->
+            <h1> Perfil cliente <span th:text="${customer.name}">NOMBRE</span></h1>
+            <div class="row gx-5 gx-lg-5 align-items-center">
+                <div class="col-md-4"><img class="card-img-top mb-5 mb-md-0"  th:src="'data:image/png;base64,'+${customer.getImageBase64()}"></div>
+                <div class="col-md-6">
+
+                    <table class="table-responsive">
+
+                <tr>
+                    <td>Nombre: </td>
+                    <td><span th:text="${customer.name}">NOMBRE</span></td>
+                </tr>
+                <tr>
+                    <td>Ciudad: </td>
+                    <td><span th:text="${customer.city}">CIUDAD</span></td>
+                </tr>
+                <tr>
+                    <td>Dirección: </td>
+                    <td><span th:text="${customer.address}">DIRECCIÓN</span></td>
+                </tr>
+                <tr>
+                    <td>Telefono: </td>
+                    <td><span th:text="${customer.phone}">TELEFONO</span></td>
+                </tr>
+                <tr>
+                    <td>Correo: </td>
+                    <td><span th:text="${customer.email}">CORREO</span></td>
+                </tr>
+            </table>
+                </div>
+            </div>
+
+            <h2> Compras </h2>
+            <div class="table-responsive">
+                <div class="table table-bordered">
+            <table>
+                <tr>
+                    <th> Fecha </th>
+                    <th> Id orden </th>
+                    <th> Libro </th>
+                    <th> Nombre libro </th>
+                    <th> ISBN </th>
+                    <th> Nombre libreria </th>
+                    <th> Estado </th>
+                    <th> Valor </th>
+                </tr>
+                <tr th:each="purchase: ${customer.getPurchases()}">
+                    <td> <span th:text="${purchase.createdAt}">            </span> </td>
+                    <td> <span th:text="${purchase.id}"> </span> </td>
+                    <td> <img width="70px" th:src="'data:image/png;base64,'+${purchase.book.getImageBase64()}"> </td>
+                    <td> <span th:text="${purchase.book.name}">   </span> </td>
+                    <td> <span th:text="${purchase.book.isbn}"> </span> </td>
+                    <td> <span th:text="${purchase.nameLibrary}"> </span> </td>
+                    <td> <span th:text="${purchase.status}"> </span> </td>
+                    <td> <span th:text="${purchase.value}">   </span> </td>
+                </tr>
+            </table>
+                </div>
+            </div>
+            <!-- Footer-->
+            <footer class="py-5 bg-dark">
+                <div class="container"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            </footer>
+            <!-- Bootstrap core JS-->
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"></script>
+            <!-- Core theme JS-->
+            <script src="js/scripts.js"></script>
+        </div>
+    </div>
+</div>
+
+<!--Bootstrap complementado con JavaScript-->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!--Complemento JavaScript-->
+<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!--Scripts personalizados para todas las páginas-->
+<script src="/js/naucratis.min.js"></script>
+
+<!--Complementos de nivel de página-->
+<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!--Secuencias de comandos personalizadas a nivel de página-->
+<script src="/js/demo/datatables-demo.js"></script>
 </body>
 </html>
