--- a/src/main/resources/templates/customer/shopping_cart.html
+++ b/src/main/resources/templates/customer/shopping_cart.html
@@ -1,34 +1,94 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-  <head>
-      <meta charset="UTF-8">
-      <title> Carrito de compras </title>
-  </head>
-  <body>
-    <h1> Ordenes </h1>
-    <table>
-        <tr>
-            <td> Fecha </td>
-            <td> Id orden </td>
-            <td> Libro </td>
-            <td> Nombre libro </td>
-            <td> ISBN </td>
-            <td> Nombre libreria </td>
-            <td> Valor </td>
-        </tr>
-        <tr th:each="order: ${orders}">
-            <td> <span th:text="${order.createdAt}">            </span> </td>
-            <td> <span th:text="${order.id}"> </span> </td>
-            <td> <img width="70px" th:src="'data:image/png;base64,'+${order.book.getImageBase64()}"> </td>
-            <td> <span th:text="${order.book.name}">   </span> </td>
-            <td> <span th:text="${order.copyBook.isbn}"> </span> </td>
-            <td> <span th:text="${order.nameLibrary}"> </span> </td>
-            <td> <span th:text="${order.copyBook.price}">   </span> </td>
-            <td> <a th:href="@{'/eliminate/shoppingCart/order/' + ${order.id}}"><button> Eliminar </button></a></td>
-        </tr>
-        <tr>
-            <td> <a th:href="@{/transaction/processPurchase}"> <button> Finalizar compra </button> </a> </td>
-        </tr>
-    </table>
-  </body>
+<head>
+    <meta charset="UTF-8">
+    <title> Carrito de compras </title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--Configuración de estilos-->
+    <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
+    <link th:href="@{/css/estilos-Naucratis.css}" rel="stylesheet">
+    <link th:href="@{/vendor/datatables/dataTables.bootstrap4.min.css}" rel="stylesheet">
+</head>
+<body>
+<div id="wrapper">
+    <!--barra de herramientas-->
+    <div th:replace="/user_no_register/home :: toolbar"/>
+    <!-- Fin barra de herramientas-->
+
+    <div id="content-wrapper" class="d-flex flex-column">
+
+        <div id="content">
+            <div th:replace="/user_no_register/home :: contentbar"/>
+            <!--Barra de contenido-->
+
+            <div class="container">
+                <h1> Órdenes </h1>
+                <div class="table-responsive">
+                    <div class="table table-bordered">
+
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th> Fecha</th>
+                                <th>Id orden</th>
+                                <th>Libro</th>
+                                <th>Nombre libro</th>
+                                <th>ISBN</th>
+                                <th>Nombre librería</th>
+                                <th>Valor</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr th:each="order: ${orders}">
+                                <td><span th:text="${order.createdAt}">            </span></td>
+                                <td><span th:text="${order.id}"> </span></td>
+                                <td><img width="100px" th:src="'data:image/png;base64,'+${order.book.getImageBase64()}">
+                                </td>
+                                <td><span th:text="${order.book.name}">   </span></td>
+                                <td><span th:text="${order.copyBook.isbn}"> </span></td>
+                                <td><span th:text="${order.nameLibrary}"> </span></td>
+                                <td><span th:text="${order.copyBook.price}">   </span></td>
+                                <td><a th:href="@{'/eliminate/shoppingCart/order/' + ${order.id}}">
+                                    <button> Eliminar</button>
+                                </a></td>
+                            </tr>
+                            <tr>
+                                <td><a th:href="@{/transaction/processPurchase}">
+                                    <button> Finalizar compra</button>
+                                </a></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div th:replace="/user_no_register/home :: utils"/>
+
+<!--Bootstrap complementado con JavaScript-->
+<script src="/vendor/jquery/jquery.min.js"></script>
+<script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+<!--Complemento JavaScript-->
+<script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
+
+<!--Scripts personalizados para todas las páginas-->
+<script src="/js/naucratis.min.js"></script>
+
+<!--Complementos de nivel de página-->
+<script src="/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+
+<!--Secuencias de comandos personalizadas a nivel de página-->
+<script src="/js/demo/datatables-demo.js"></script>
+</body>
 </html>
+
+
